--- a/src/main/resources/assets/malilib/lang/en_us.json
+++ b/src/main/resources/assets/malilib/lang/en_us.json
@@ -72,6 +72,7 @@
     "malilib.gui.title.generic": "Generic",
     "malilib.gui.title.keybind_settings.advanced": "Advanced Keybind Settings for %s",
     "malilib.gui.title.string_list_edit": "Edit string list for '%s'",
+    "malilib.gui.title.color_list_edit": "Edit color list for '%s'",
 
     "malilib.hover.color_indicator.open_color_editor": "Open Color Editor",
     "malilib.label.active_mode.always": "Always",
